# dsRNA_pipeline

./: .gitignore  README.md  main.py  pyproject.toml
input/: gene_ids copy.txt  gene_ids.txt  insects_list.csv
src/: accessibility_example.py
src/dsrna_worst_case_pipeline_v2/: main.py  orthodb_fetch_cds.py
src/dsrna_worst_case_pipeline_v2/commands/: aggregate_metrics.py  align_sequences.py  bowtie_match.py  calculate_accessibility.py  fetch_cds.py  pairwise_align.py  plot_lengths.py  run_all.py
src/dsrna_worst_case_pipeline_v2/utils/: bio.py  orthodb.py
